--- a/logging_configure.json
+++ b/logging_configure.json
@@ -19,7 +19,7 @@
       "filename": "vllm_requests.log",
       "maxBytes": 10485760,
       "backupCount": 5,
-      "level": "INFO"
+      "level": "DEBUG"
     },
     "console_handler": {
       "class": "logging.StreamHandler",
