--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-#Run result artifacts - exclude large files but allow summaries
-results/**/*.json
+#Run result artifacts - exclude logs and temp files but allow JSON results
 results/**/*.log
 results/**/*.tmp
 results/**/temp_*
-# But allow result summaries and analysis
-!results/**/summary_*.json
-!results/**/analysis_*.json
-!results/**/README*.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
